data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3961.wast
;; 10. **Test Description 10**:    - Design a test involving cross-referencing `call_indirect` and normal `call` within functions interconnected by branching instructions (`br_if`, `br_table`). Ensure the normal calls and indirect calls work together and the branch targets resolve appropriately, reflecting in consistent stack frames and return values, distinguishing potential erroneous behaviors.

(assert_invalid
  (module
    (type $sig (func (param i32)))
    (type $sig2 (func (result i32)))
    (func $target1 (param i32))
    (func $target2 (result i32) (i32.const 42))
    (table funcref (elem $target1 $target2))
    (func (result i32)
      (i32.const 0) 
      (br_if 0 
        (block (call_indirect (type $sig) (i32.const 0)))
      )
      (call_indirect (type $sig2) (i32.const 1))
    )
  )
  "type mismatch"
)